--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  percent_indicator: "^2.1.5"
   platform_alert_dialog: ^1.0.0+2
   shared_preferences: ^0.5.7+3
   shimmer: ^1.1.1
