--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  loading_indicator: ^1.2.0
+  email_validator: ^1.0.5
   percent_indicator: "^2.1.5"
   platform_alert_dialog: ^1.0.0+2
   shared_preferences: ^0.5.7+3
