--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  url_launcher: ^5.5.0
   loading_indicator: ^1.2.0
   email_validator: ^1.0.5
   percent_indicator: "^2.1.5"
